<resources>
    <string name="app_name">Pizza Luigi</string>
    <!--INICIO-->
    <string name="strTvInicio">INICIO</string>
    <string name="strBtnInitGuiInicio">INICIAR SESIÓN</string>
    <string name="strBtnRegisGuiInicio">REGISTRARSE</string>
    <!--INICIO-->
    <string name="strTvLogin">LOGIN</string>
    <string name="strHintUsuarioLogin">Usuario</string>
    <string name="strHintPassLogin">Contraseña</string>
    <string name="strBtnLogin">SIGUIENTE</string>
    <string name="strCheckLogin">Guardar usuario y contraseña</string>
    <!--REGISTRO-->
    <string name="strTvRegistro">REGISTRO</string>
    <string name="strHintUsuRegistro">Usuario</string>
    <string name="strHintEmailRegistro">Email</string>
    <string name="strHintPassRegistro">Constraseña</string>
    <string name="strBtnRegistro">GUARDAR</string>
    <!--PANEL OPCIONES-->
    <string name="strWifi">Wifi </string>
    <string name="strTvPanelOp">PANEL DE OPCIONES</string>
    <string name="strBtnWeb">WEB</string>
    <string name="strBtnPedido">PEDIDO</string>
    <string name="strBtnConfig">CONFIGURACIÓN</string>
    <!--OPCIONES PEDIDO-->
    <string name="strTvOpcionesPedido">OPCIONES PEDIDO</string>
    <string name="strBtnDeLaCasa">de la casa</string>
    <string name="strBtnEligeIngredientes">elige tus ingredientes</string>
    <string name="strBtnFavorita">favorita</string>
    <!--GUI DE LA CASA-->
    <string name="strTvGuiDeLaCasa">PIZZAS DE LA CASA</string>
    <!--GUI DETALLE PIZZA DE LA CASA-->
    <string name="strTvDetalleDeLaCasa">ESPECIALIDAD DE LA CASA</string>
    <string name="strCheckMini">Pequeña</string>
    <string name="strCheckMiddle">Mediana</string>
    <string name="strCheckBig">Grande</string>
    <string name="strTvCantidad">Cantidad</string>
    <string name="strBtnListo">listo !!!</string>
    <string name="strCheckMarcaFavorita">Marcar como favorita</string>
    <!--GUI PIZZAS AL GUSTO-->
    <string name="strTvPizzasGusto">PIZZAS AL GUSTO</string>
    <string name="strIngredienteQueso">Queso</string>
    <string name="strIngredienteJamon">Jamón</string>
    <string name="strIngredienteSalchicha">Salchicha</string>
    <string name="strIngredienteYork">York</string>
    <string name="strIngredienteAtun">Atún</string>
    <string name="strIngredienteOliva">Oliva</string>
    <string name="strIngredienteBacon">Bacon</string>
    <string name="strIngredientePepperoni">Pepperoni</string>
    <!--GUI DETALLES PIZZA AL GUSTO-->
    <string name="strTvDetallePizzaGusto">DETALLES DE SU PIZZA AL GUSTO</string>
    <!--GUI REPARTO-->
    <string name="strTvReparto">¡ Llegará en 20 minutos aprox. !</string>
    <!--GUI CONFIG USER-->
    <string name="strTvConfigUser">CONFIGURACIÓN DEL USUARIO</string>
    <string name="strHintPassVieja">Escribe la vieja contraseña</string>
    <string name="strTvNuevosDatos">Nuevos datos del registro</string>
    <string name="strBtnConfiguracion">guardar</string>
    <string name="strContador">0</string>

</resources>
