<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_PizzaAlGusto">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/strTvPizzasGusto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/idCheckMinGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/strCheckMini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/idCheckMiddleGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strCheckMiddle"
        app:layout_constraintEnd_toEndOf="@+id/idCheckMinGusto"
        app:layout_constraintStart_toStartOf="@+id/idCheckMinGusto"
        app:layout_constraintTop_toBottomOf="@+id/idCheckMinGusto" />

    <CheckBox
        android:id="@+id/idCheckBigGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strCheckBig"
        app:layout_constraintEnd_toEndOf="@+id/idCheckMiddleGusto"
        app:layout_constraintStart_toStartOf="@+id/idCheckMiddleGusto"
        app:layout_constraintTop_toBottomOf="@+id/idCheckMiddleGusto" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTvCantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idCheckMinGusto"
        app:layout_constraintTop_toTopOf="@+id/idCheckMinGusto" />

    <CheckBox
        android:id="@+id/idCheckQueso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/strIngredienteQueso"
        app:layout_constraintStart_toStartOf="@+id/idCheckBigGusto"
        app:layout_constraintTop_toBottomOf="@+id/idCheckBigGusto" />

    <CheckBox
        android:id="@+id/idCheckJamon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteJamon"
        app:layout_constraintEnd_toEndOf="@+id/idCheckQueso"
        app:layout_constraintStart_toStartOf="@+id/idCheckQueso"
        app:layout_constraintTop_toBottomOf="@+id/idCheckQueso" />

    <CheckBox
        android:id="@+id/idCheckSalchicha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteSalchicha"
        app:layout_constraintEnd_toEndOf="@+id/idCheckJamon"
        app:layout_constraintStart_toStartOf="@+id/idCheckJamon"
        app:layout_constraintTop_toBottomOf="@+id/idCheckJamon" />

    <CheckBox
        android:id="@+id/idCheckYork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteYork"
        app:layout_constraintEnd_toEndOf="@+id/idCheckSalchicha"
        app:layout_constraintStart_toStartOf="@+id/idCheckSalchicha"
        app:layout_constraintTop_toBottomOf="@+id/idCheckSalchicha" />

    <CheckBox
        android:id="@+id/idCheckAtun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteAtun"
        app:layout_constraintStart_toStartOf="@+id/idCheckYork"
        app:layout_constraintTop_toBottomOf="@+id/idCheckYork" />

    <CheckBox
        android:id="@+id/idCheckOliva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteOliva"
        app:layout_constraintEnd_toEndOf="@+id/idCheckAtun"
        app:layout_constraintStart_toStartOf="@+id/idCheckAtun"
        app:layout_constraintTop_toBottomOf="@+id/idCheckAtun" />

    <CheckBox
        android:id="@+id/idCheckBacon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/strIngredienteBacon"
        app:layout_constraintEnd_toEndOf="@+id/idCheckOliva"
        app:layout_constraintStart_toStartOf="@+id/idCheckOliva"
        app:layout_constraintTop_toBottomOf="@+id/idCheckOliva" />

    <Button
        android:id="@+id/idBtnLIstoGusto"
        android:layout_width="207dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:text="@string/strBtnListo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCheckBacon" />

    <TextView
        android:id="@+id/idTvContadorGusto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/idBtnLeftGusto"
        android:layout_width="31dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/arrowleft"
        app:layout_constraintBottom_toBottomOf="@+id/idTvContadorGusto"
        app:layout_constraintEnd_toStartOf="@+id/idTvContadorGusto"
        app:layout_constraintTop_toTopOf="@+id/idTvContadorGusto" />

    <Button
        android:id="@+id/idBtnRightGusto"
        android:layout_width="31dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/arrowright"
        app:layout_constraintBottom_toBottomOf="@+id/idTvContadorGusto"
        app:layout_constraintStart_toEndOf="@+id/idTvContadorGusto"
        app:layout_constraintTop_toTopOf="@+id/idTvContadorGusto" />

</androidx.constraintlayout.widget.ConstraintLayout>