<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI_DetallePizzaCasa">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/strTvDetalleDeLaCasa"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/idCheckMini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="32dp"
        android:text="@string/strCheckMini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/idCheckMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/strCheckMiddle"
        app:layout_constraintStart_toStartOf="@+id/idCheckMini"
        app:layout_constraintTop_toBottomOf="@+id/idCheckMini" />

    <CheckBox
        android:id="@+id/idCheckBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/strCheckBig"
        app:layout_constraintStart_toStartOf="@+id/idCheckMiddle"
        app:layout_constraintTop_toBottomOf="@+id/idCheckMiddle" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTvCantidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idCheckMini"
        app:layout_constraintTop_toTopOf="@+id/idCheckMini" />

    <Button
        android:id="@+id/idBtnRestaDetallePizzaCasa"
        android:layout_width="37dp"
        android:layout_height="24dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/arrowleft"
        app:layout_constraintBottom_toBottomOf="@+id/idTvContador"
        app:layout_constraintEnd_toStartOf="@+id/idTvContador"
        app:layout_constraintTop_toTopOf="@+id/idTvContador" />

    <Button
        android:id="@+id/idBtnSumaDetallePizzaCasa"
        android:layout_width="37dp"
        android:layout_height="24dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/arrowright"
        app:layout_constraintBottom_toBottomOf="@+id/idTvContador"
        app:layout_constraintStart_toEndOf="@+id/idTvContador"
        app:layout_constraintTop_toTopOf="@+id/idTvContador" />

    <ImageView
        android:id="@+id/idFotoDetalleCasa"
        android:layout_width="249dp"
        android:layout_height="235dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCheckBig"
        app:srcCompat="@drawable/img2" />

    <Button
        android:id="@+id/idBtnDetalleCasa"
        android:layout_width="283dp"
        android:layout_height="47dp"
        android:layout_marginTop="11dp"
        android:text="@string/strBtnListo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idCheckMarcaFavorita" />

    <CheckBox
        android:id="@+id/idCheckMarcaFavorita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/strCheckMarcaFavorita"
        app:layout_constraintStart_toStartOf="@+id/idFotoDetalleCasa"
        app:layout_constraintTop_toBottomOf="@+id/idFotoDetalleCasa" />

    <TextView
        android:id="@+id/idTvContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/strContador"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>