<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrapurple"
    tools:context=".GUI_REGISTRO">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/strTvRegistro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/idEdtUsuRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/strHintUsuRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/idEdtEmailRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/strHintEmailRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idEdtUsuRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtUsuRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtUsuRegistro" />

    <EditText
        android:id="@+id/idEdtPassRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="@font/carter_one"
        android:hint="@string/strHintPassRegistro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/idEdtEmailRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtEmailRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEmailRegistro" />

    <Button
        android:id="@+id/idBtnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/stylebutton02"
        android:fontFamily="@font/carter_one"
        android:text="@string/strBtnRegistro"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idEdtPassRegistro"
        app:layout_constraintStart_toStartOf="@+id/idEdtPassRegistro"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPassRegistro" />
</androidx.constraintlayout.widget.ConstraintLayout>