<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrayellow"
    tools:context=".GUI_PANEL_OPCIONES">

    <Switch
        android:id="@+id/idWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/strWifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:background="@drawable/style_btn_bottom"
        android:text="@string/strBtnWeb"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/idBtnPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_btn_bottom"
        android:text="@string/strBtnPedido"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idBtnWeb"
        app:layout_constraintStart_toStartOf="@+id/idBtnWeb"
        app:layout_constraintTop_toBottomOf="@+id/idBtnWeb" />

    <Button
        android:id="@+id/idBtnConfig"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_btn_bottom"
        android:text="@string/strBtnConfig"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/idBtnPedido"
        app:layout_constraintStart_toStartOf="@+id/idBtnPedido"
        app:layout_constraintTop_toBottomOf="@+id/idBtnPedido" />
</androidx.constraintlayout.widget.ConstraintLayout>